discussion/kv_engine/177742/177742_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

toy: expose sstable writer

Change-Id: Id698b34c80e96a34938be3c745a73840581bf863

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2022-07-19 13:51:24.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-19 13:56:35.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47919/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(567): error C2039: "SSTableWriteBufferSize": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47919/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19087/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28: error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"? [clang-diagnostic-error]
    configuration.magmaCfg.SSTableWriteBufferSize = configuration.getMagmaSstableWriterBufferSize();
                           ^~~~~~~~~~~~~~~~~~~~~~
                           SSTableWriterBufferSize
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:944:12: note: "SSTableWriterBufferSize" declared here
    size_t SSTableWriterBufferSize{1024 * 512};
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19087/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19087/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40262/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:2314:54:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40262/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8773/ : FAILURE

Compile error at [2022-07-19T13:52:25.058Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8773/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8869/ : FAILURE

Compile error at [2022-07-19T13:53:54.826Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/benchmarks/tracing_bench.cc:48:13:
error: ?ScopeTimer? was not declared in this scope; did you mean ?ScopeTimer2??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8869/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20992/ : FAILURE

Compile error at [2022-07-19T13:53:11.297Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/benchmarks/tracing_bench.cc:48:13:
error: ?ScopeTimer? was not declared in this scope; did you mean ?ScopeTimer2??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20992/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20237/ : FAILURE

Compile error at [2022-07-19T13:55:17.268Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20237/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21350/ : FAILURE

Compile error at [2022-07-19T13:53:16.998Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: ?struct magma::Magma::Config? has no member named ?SSTableWriteBufferSize?; did you mean ?SSTableWriterBufferSize??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21350/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22049/ : FAILURE

Compile error at [2022-07-19T13:52:22.999Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22049/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29386/ : FAILURE

Compile error at [2022-07-19T13:52:50.953Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29386/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18249/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
